--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Tenglong Huang (黄腾龙)"
-  avatar           : "images/huangtenglong.jpg"
+  avatar           : "images/android-chrome-512x512"
   bio              : "Harbin Institute of Technology"
   location         : "Xi'an, China"
   employer         :
