--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@
 
 # Site Settings
 title                    : "Tenglong Huang (黄腾龙)"
-description              : "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ornare aliquet ipsum, ac tempus justo dapibus sit amet. "
-repository               : "RayeRen/acad-homepage.github.io"
-google_scholar_stats_use_cdn : true
+description              : #"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ornare aliquet ipsum, ac tempus justo dapibus sit amet. "
+repository               : # "RayeRen/acad-homepage.github.io"
+google_scholar_stats_use_cdn :# true
 
 # google analytics
 google_analytics_id      :  # get google_analytics_id from https://analytics.google.com/analytics/
@@ -21,8 +21,8 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Tenglong Huang"
-  avatar           : "images/square.png"
+  name             : "Tenglong Huang (黄腾龙)"
+  avatar           : "images/circle.png"
   bio              : "Harbin Institute of Technology"
   location         : "Xi'an, China"
   employer         :
