--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ author:
   lastfm           :
   linkedin         : # e.g., "linkedin username"
   dblp             : # e.g., "https://dblp.org/pid/xx/xxxx.html"
-  orcid            : # e.g., "https://orcid.org/xxxx"
+  orcid            : "https://orcid.org/0000-0001-9420-7990"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
@@ -57,7 +57,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
-
+  zhihu            : "https://www.zhihu.com/people/hiterhuang"
 
 # Reading Files
 include:
