--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Tenglong Huang (黄腾龙)"
-  avatar           : "images/circle.png"
+  name             : "Tenglong Huang"
+  avatar           : "images/square.png"
   bio              : "Harbin Institute of Technology"
   location         : "Xi'an, China"
   employer         :
