--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title                    : "Tenglong Huang (黄腾龙)"
 description              : "Lorem ."
 repository               : "RayeRen/acad-homepage.github.io"
-google_scholar_stats_use_cdn :# true
+google_scholar_stats_use_cdn : true
 
 # google analytics
 google_analytics_id      :  # get google_analytics_id from https://analytics.google.com/analytics/
