--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Tenglong Huang (黄腾龙)"
-description              : "Lorem ."
+description              : "Ph.D. in Control Science and Engineering."
 repository               : "RayeRen/acad-homepage.github.io"
 google_scholar_stats_use_cdn : true
 
