--- a/_config.yml
+++ b/_config.yml
@@ -53,11 +53,11 @@ author:
   tumblr           :
   twitter          : 
   vine             :
-  weibo            :
+  weibo            : "https://www.zhihu.com/people/hiterhuang"
   xing             :
   youtube          :
   wikipedia        :
-  zhihu            : "https://www.zhihu.com/people/hiterhuang"
+  #zhihu            : "https://www.zhihu.com/people/hiterhuang"
 
 # Reading Files
 include:
