--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : # e.g., "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
-  email            : huangtenglong@hotmail.com
+  email            : #huangtenglong@hotmail.com
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -57,7 +57,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
-  zhihu            : https://www.zhihu.com/people/hiterhuang
+  #zhihu            : https://www.zhihu.com/people/hiterhuang
 
 # Reading Files
 include:
