--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 title                    : "Tenglong Huang (黄腾龙)"
 description              : "Ph.D. in Control Science and Engineering"
-repository               : "RayeRen/acad-homepage.github.io"
+repository               : "HTL2018/htl2018.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
