--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,8 +15,13 @@ main:
   - title: "Educations"
     url: "/#-educations"
 
+  - title: "Services"
+    url: "/#-services"
+
+<!-- 
   - title: "Invited Talks"
     url: "/#-invited-talks"
 
   - title: "Internships"
     url: "/#-internships"
+-->
