--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,12 +14,9 @@ main:
 
   - title: "Educations"
     url: "/#-educations"
-
-<!-- 
-  - title: "Services"
-    url: "/#-services"
--->
-
+ 
+  #- title: "Services"
+  #  url: "/#-services"
 
   - title: "Invited Talks"
     url: "/#-invited-talks"
