--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,8 +18,8 @@ main:
   #- title: "Services"
   #  url: "/#-services"
 
-  - title: "Invited Talks"
-    url: "/#-invited-talks"
+  #- title: "Invited Talks"
+  #  url: "/#-invited-talks"
 
-  - title: "Internships"
-    url: "/#-internships"
+  #- title: "Internships"
+  #  url: "/#-internships"
