--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: "About Me"
     url: "/#about-me"
 
-  - title: "News"
-    url: "/#-news"
+  # - title: "News"
+   #  url: "/#-news"
 
   - title: "Publications"
     url: "/#-publications"
@@ -14,6 +14,9 @@ main:
 
   - title: "Educations"
     url: "/#-educations"
+
+  - title: "Work"
+    url: "/#-work"
  
   - title: "Services"
     url: "/#-services"
