--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,11 +12,11 @@ main:
   - title: "Honors and Awards"
     url: "/#-honors-and-awards"
 
-  - title: "Education"
+  - title: "Educations"
     url: "/#-educations"
 
-  - title: "Work"
-    url: "/#-work"
+  - title: "Works"
+    url: "/#-works"
  
   - title: "Services"
     url: "/#-services"
