--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,6 @@
 # Site Settings
 title                    : "Tenglong Huang (黄腾龙)"
 description              : "Ph.D. in Control Science and Engineering"
-description              : "Ph.D. in Control Science and Engineering1"
 repository               : "HTL2018/htl2018.github.io"
 google_scholar_stats_use_cdn : true
 
@@ -26,7 +25,7 @@ author:
   avatar           : "images/square.png"
   bio              : "Harbin Institute of Technology"
   location         : "Xi'an, China"
-  employer         :
+  employer         :"Harbin Institute of Technology"
   pubmed           : 
   googlescholar    : # e.g., "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
   email            : "huangtenglong@hotmail.com"
