--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Tenglong Huang (黄腾龙)"
-description              : "Ph.D. in Control Science and Engineering"
+description              : "Ph.D. in Control Science and Engineering | aaab"
 repository               : "HTL2018/htl2018.github.io"
 google_scholar_stats_use_cdn : true
 
