--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Tenglong Huang (黄腾龙)"
-description              : "Ph.D. in Control Science and Engineering"
+description              : "Ph.D. in Control Science and Engineering \n Ph.D. in Control Science and Engineering"
 repository               : "HTL2018/htl2018.github.io"
 google_scholar_stats_use_cdn : true
 
@@ -24,7 +24,7 @@ author:
   name             : "Tenglong Huang"
   avatar           : "images/square.png"
   bio              : "Harbin Institute of Technology"
-  location         : "Xi'an, China"
+  location         : "Shaanxi, China"
   employer         : 
   pubmed           : 
   googlescholar    : # e.g., "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
