--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,8 +21,8 @@ main:
   - title: "Services"
     url: "/#-services"
 
-  - title: "Invited Presentations"
-    url: "/#-invited-presentations"
+  - title: "Invited Talks"
+    url: "/#-invited-talks"
 
 
   #- title: "Invited Talks"
